--- a/index.html
+++ b/index.html
@@ -818,7 +818,16 @@
              <li data-ev="8.414"><span class="bigfont1" aria-label="ionization energy 8 . 4 1 4">8.414</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 17</td>
+      <td id="astatine" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="85"><span class="bigfont1" aria-label="atomic number 85">85</span></li>
+             <li data-symbol="A t" aria-label="atomic symbol A t" class="bigfont2">A<span class="letter-tight">t</span></li>
+             <li data-element="astatine"><span class="bigfont1" aria-label="element">Astatine</span></li>
+             <li data-weight="(210)"><span class="bigfont1" aria-label="standard atomic weight (210)">(210)</span></li>
+             <li data-groundstate="astatine"><span class="bigfont1" aria-label="ground [Hg]6p 5">[Hg]6p<sup>5</sup></li>
+             <li data-ev="9.3175"><span class="bigfont1" aria-label="ionization energy 9 . 3 1 7 5">9.3175</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 18</td>
     </tr>
     <tr>
