--- a/index_backup2.html
+++ b/index_backup2.html
@@ -808,8 +808,26 @@
              <li data-ev="7.2855"><span class="bigfont1" aria-label="ionization energy 7 . 2 8 5 5">7.2855</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 16</td>
-      <td>Row 6, Cell 17</td>
+      <td id="polonium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="84"><span class="bigfont1" aria-label="atomic number 84">84</span></li>
+             <li data-symbol="P o" aria-label="atomic symbol P o" class="bigfont2">P<span class="letter-tight">o</span></li>
+             <li data-element="polonium"><span class="bigfont1" aria-label="element">Polonium</span></li>
+             <li data-weight="(209)"><span class="bigfont1" aria-label="standard atomic weight (209)">(209)</span></li>
+             <li data-groundstate="polonium"><span class="bigfont1" aria-label="ground [Hg]6p 4">[Hg]6p<sup>4</sup></li>
+             <li data-ev="8.414"><span class="bigfont1" aria-label="ionization energy 8 . 4 1 4">8.414</span></li> 
+          </ul>
+      </td>
+      <td id="astatine" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="85"><span class="bigfont1" aria-label="atomic number 85">85</span></li>
+             <li data-symbol="A t" aria-label="atomic symbol A t" class="bigfont2">A<span class="letter-tight">t</span></li>
+             <li data-element="astatine"><span class="bigfont1" aria-label="element">Astatine</span></li>
+             <li data-weight="(210)"><span class="bigfont1" aria-label="standard atomic weight (210)">(210)</span></li>
+             <li data-groundstate="astatine"><span class="bigfont1" aria-label="ground [Hg]6p 5">[Hg]6p<sup>5</sup></li>
+             <li data-ev="9.3175"><span class="bigfont1" aria-label="ionization energy 9 . 3 1 7 5">9.3175</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 18</td>
     </tr>
     <tr>
