--- a/index.html
+++ b/index.html
@@ -828,7 +828,16 @@
              <li data-ev="9.3175"><span class="bigfont1" aria-label="ionization energy 9 . 3 1 7 5">9.3175</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 18</td>
+      <td id="radon" class="gases" tabindex="0">
+            <ul>
+             <li data-atomicnumber="86"><span class="bigfont1" aria-label="atomic number 86">86</span></li>
+             <li data-symbol="R n" aria-label="atomic symbol R n" class="bigfont2">R<span class="letter-tight">n</span></li>
+             <li data-element="radon"><span class="bigfont1" aria-label="element">Radon</span></li>
+             <li data-weight="(222)"><span class="bigfont1" aria-label="standard atomic weight (222)">(222)</span></li>
+             <li data-groundstate="radon"><span class="bigfont1" aria-label="ground [Hg]6p 6">[Hg]6p<sup>6</sup></li>
+             <li data-ev="10.7485"><span class="bigfont1" aria-label="ionization energy 10 . 7 4 8 5">10.7485</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr>
       <td>Row 7, Cell 1</td>
