--- a/index_backup1.html
+++ b/index_backup1.html
@@ -818,8 +818,26 @@
              <li data-ev="8.414"><span class="bigfont1" aria-label="ionization energy 8 . 4 1 4">8.414</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 17</td>
-      <td>Row 6, Cell 18</td>
+      <td id="astatine" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="85"><span class="bigfont1" aria-label="atomic number 85">85</span></li>
+             <li data-symbol="A t" aria-label="atomic symbol A t" class="bigfont2">A<span class="letter-tight">t</span></li>
+             <li data-element="astatine"><span class="bigfont1" aria-label="element">Astatine</span></li>
+             <li data-weight="(210)"><span class="bigfont1" aria-label="standard atomic weight (210)">(210)</span></li>
+             <li data-groundstate="astatine"><span class="bigfont1" aria-label="ground [Hg]6p 5">[Hg]6p<sup>5</sup></li>
+             <li data-ev="9.3175"><span class="bigfont1" aria-label="ionization energy 9 . 3 1 7 5">9.3175</span></li> 
+          </ul>
+      </td>
+      <td id="radon" class="gases" tabindex="0">
+            <ul>
+             <li data-atomicnumber="86"><span class="bigfont1" aria-label="atomic number 86">86</span></li>
+             <li data-symbol="R n" aria-label="atomic symbol R n" class="bigfont2">R<span class="letter-tight">n</span></li>
+             <li data-element="radon"><span class="bigfont1" aria-label="element">Radon</span></li>
+             <li data-weight="(222)"><span class="bigfont1" aria-label="standard atomic weight (222)">(222)</span></li>
+             <li data-groundstate="radon"><span class="bigfont1" aria-label="ground [Hg]6p 6">[Hg]6p<sup>6</sup></li>
+             <li data-ev="10.7485"><span class="bigfont1" aria-label="ionization energy 10 . 7 4 8 5">10.7485</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr>
       <td>Row 7, Cell 1</td>
