--- a/index.html
+++ b/index.html
@@ -840,7 +840,17 @@
       </td>
     </tr>
     <tr>
-      <td>Row 7, Cell 1</td>
+    <td id="francium" class="gases" tabindex="0">
+            <ul>
+             <li data-atomicnumber="87"><span class="bigfont1" aria-label="atomic number 87">87</span></li>
+             <li data-symbol="F r" aria-label="atomic symbol F r" class="bigfont2">F<span class="letter-tight">r</span></li>
+             <li data-element="francium"><span class="bigfont1" aria-label="element">Francium</span></li>
+             <li data-weight="(223)"><span class="bigfont1" aria-label="standard atomic weight (223)">(223)</span></li>
+             <li data-groundstate="francium"><span class="bigfont1" aria-label="ground [Rn]7s">[Rn]7s</li>
+             <li data-ev="4.0727"><span class="bigfont1" aria-label="ionization energy 4 . 0 7 2 7">4.0727</span></li> 
+          </ul>
+      </td>
+    </tr>
       <td>Row 7, Cell 2</td>
       <td class="hidden">Row 7, Cell 3</td>
       <td>Row 7, Cell 4</td>
