--- a/index_backup2.html
+++ b/index_backup2.html
@@ -828,10 +828,29 @@
              <li data-ev="9.3175"><span class="bigfont1" aria-label="ionization energy 9 . 3 1 7 5">9.3175</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 18</td>
+      <td id="radon" class="gases" tabindex="0">
+            <ul>
+             <li data-atomicnumber="86"><span class="bigfont1" aria-label="atomic number 86">86</span></li>
+             <li data-symbol="R n" aria-label="atomic symbol R n" class="bigfont2">R<span class="letter-tight">n</span></li>
+             <li data-element="radon"><span class="bigfont1" aria-label="element">Radon</span></li>
+             <li data-weight="(222)"><span class="bigfont1" aria-label="standard atomic weight (222)">(222)</span></li>
+             <li data-groundstate="radon"><span class="bigfont1" aria-label="ground [Hg]6p 6">[Hg]6p<sup>6</sup></li>
+             <li data-ev="10.7485"><span class="bigfont1" aria-label="ionization energy 10 . 7 4 8 5">10.7485</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr>
-      <td>Row 7, Cell 1</td>
+    <td id="francium" class="gases" tabindex="0">
+            <ul>
+             <li data-atomicnumber="87"><span class="bigfont1" aria-label="atomic number 87">87</span></li>
+             <li data-symbol="F r" aria-label="atomic symbol F r" class="bigfont2">F<span class="letter-tight">r</span></li>
+             <li data-element="francium"><span class="bigfont1" aria-label="element">Francium</span></li>
+             <li data-weight="(223)"><span class="bigfont1" aria-label="standard atomic weight (223)">(223)</span></li>
+             <li data-groundstate="francium"><span class="bigfont1" aria-label="ground [Rn]7s">[Rn]7s</li>
+             <li data-ev="4.0727"><span class="bigfont1" aria-label="ionization energy 4 . 0 7 2 7">4.0727</span></li> 
+          </ul>
+      </td>
+    </tr>
       <td>Row 7, Cell 2</td>
       <td class="hidden">Row 7, Cell 3</td>
       <td>Row 7, Cell 4</td>
