--- a/index_backup1.html
+++ b/index_backup1.html
@@ -840,8 +840,26 @@
       </td>
     </tr>
     <tr>
-      <td>Row 7, Cell 1</td>
-      <td>Row 7, Cell 2</td>
+    <td id="francium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="87"><span class="bigfont1" aria-label="atomic number 87">87</span></li>
+             <li data-symbol="F r" aria-label="atomic symbol F r" class="bigfont2">F<span class="letter-tight">r</span></li>
+             <li data-element="francium"><span class="bigfont1" aria-label="element">Francium</span></li>
+             <li data-weight="(223)"><span class="bigfont1" aria-label="standard atomic weight (223)">(223)</span></li>
+             <li data-groundstate="francium"><span class="bigfont1" aria-label="ground [Rn]7s">[Rn]7s</li>
+             <li data-ev="4.0727"><span class="bigfont1" aria-label="ionization energy 4 . 0 7 2 7">4.0727</span></li> 
+          </ul>
+      </td>
+      <td id="radium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="88"><span class="bigfont1" aria-label="atomic number 88">88</span></li>
+             <li data-symbol="R a" aria-label="atomic symbol R a" class="bigfont2">R<span class="letter-tight">a</span></li>
+             <li data-element="radium"><span class="bigfont1" aria-label="element">Radium</span></li>
+             <li data-weight="(226)"><span class="bigfont1" aria-label="standard atomic weight (226)">(226)</span></li>
+             <li data-groundstate="radium"><span class="bigfont1" aria-label="ground [Rn]7s 2">[Rn]7s<sup>2</sup></li>
+             <li data-ev="5.2784"><span class="bigfont1" aria-label="ionization energy 5 . 2 7 8 4">5.2784</span></li> 
+          </ul>
+      </td>
       <td class="hidden">Row 7, Cell 3</td>
       <td>Row 7, Cell 4</td>
       <td>Row 7, Cell 5</td>
