--- a/index_backup2.html
+++ b/index_backup2.html
@@ -861,7 +861,16 @@
           </ul>
       </td>
       <td class="hidden">Row 7, Cell 3</td>
-      <td>Row 7, Cell 4</td>
+      <td id="rutherfordium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="104"><span class="bigfont1" aria-label="atomic number 104">104</span></li>
+             <li data-symbol="R f" aria-label="atomic symbol R f" class="bigfont2">R<span class="letter-tight">f</span></li>
+             <li data-element="rutherfordium"><span class="bigfont1" aria-label="element">Rutherfordium</span></li>
+             <li data-weight="(267)"><span class="bigfont1" aria-label="standard atomic weight (267)">(267)</span></li>
+             <li data-groundstate="rutherfordium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 2 7s 2">[Rn]5f<sup>14</sup>6d<sup>2</sup>7s<sup>2</sup></li>
+             <li data-ev="6.02"><span class="bigfont1" aria-label="ionization energy 6 . 0 2">6.02</span></li> 
+          </ul>
+      </td>
       <td>Row 7, Cell 5</td>
       <td>Row 7, Cell 6</td>
       <td>Row 7, Cell 7</td>
