--- a/index.html
+++ b/index.html
@@ -871,7 +871,16 @@
              <li data-ev="6.02"><span class="bigfont1" aria-label="ionization energy 6 . 0 2">6.02</span></li> 
           </ul>
       </td>
-      <td>Row 7, Cell 5</td>
+      <td id="dubnium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="105"><span class="bigfont1" aria-label="atomic number 105">105</span></li>
+             <li data-symbol="D b" aria-label="atomic symbol D b" class="bigfont2">D<span class="letter-tight">b</span></li>
+             <li data-element="dubnium"><span class="bigfont1" aria-label="element">Dubnium</span></li>
+             <li data-weight="(268)"><span class="bigfont1" aria-label="standard atomic weight (268)">(268)</span></li>
+             <li data-groundstate="dubnium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 3 7s 2"> [Rn]5f<sup>14</sup>6d<sup>3</sup>7s<sup>2</sup></li>
+             <li data-ev="6.8"><span class="bigfont1" aria-label="ionization energy 6 . 8">6.8</span></li> 
+          </ul>
+      </td>
       <td>Row 7, Cell 6</td>
       <td>Row 7, Cell 7</td>
       <td>Row 7, Cell 8</td>
