--- a/index.html
+++ b/index.html
@@ -881,7 +881,16 @@
              <li data-ev="6.8"><span class="bigfont1" aria-label="ionization energy 6 . 8">6.8</span></li> 
           </ul>
       </td>
-      <td>Row 7, Cell 6</td>
+      <td id="seaborgium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="106"><span class="bigfont1" aria-label="atomic number 106">106</span></li>
+             <li data-symbol="S g" aria-label="atomic symbol S g" class="bigfont2">S<span class="letter-tight">g</span></li>
+             <li data-element="seaborgium"><span class="bigfont1" aria-label="element">Seaborgium</span></li>
+             <li data-weight="(269)"><span class="bigfont1" aria-label="standard atomic weight (269)">(269)</span></li>
+             <li data-groundstate="seaborgium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 4 7s 2"> [Rn]5f<sup>14</sup>6d<sup>4</sup>7s<sup>2</sup></li>
+             <li data-ev="7.8"><span class="bigfont1" aria-label="ionization energy 7 . 8">7.8</span></li> 
+          </ul>
+      </td>
       <td>Row 7, Cell 7</td>
       <td>Row 7, Cell 8</td>
       <td>Row 7, Cell 9</td>
@@ -895,7 +904,7 @@
       <td>Row 7, Cell 17</td>
       <td>Row 7, Cell 18</td>
     </tr>
-    <tr>
+    <tr style="margin-top:50px;">
       <td class="hidden">Row 8, Cell 1</td>
       <td class="hidden">Row 8, Cell 2</td>
       <td>Row 8, Cell 3</td>
