--- a/index_backup1.html
+++ b/index_backup1.html
@@ -861,9 +861,36 @@
           </ul>
       </td>
       <td class="hidden">Row 7, Cell 3</td>
-      <td>Row 7, Cell 4</td>
-      <td>Row 7, Cell 5</td>
-      <td>Row 7, Cell 6</td>
+      <td id="rutherfordium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="104"><span class="bigfont1" aria-label="atomic number 104">104</span></li>
+             <li data-symbol="R f" aria-label="atomic symbol R f" class="bigfont2">R<span class="letter-tight">f</span></li>
+             <li data-element="rutherfordium"><span class="bigfont1" aria-label="element">Rutherfordium</span></li>
+             <li data-weight="(267)"><span class="bigfont1" aria-label="standard atomic weight (267)">(267)</span></li>
+             <li data-groundstate="rutherfordium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 2 7s 2">[Rn]5f<sup>14</sup>6d<sup>2</sup>7s<sup>2</sup></li>
+             <li data-ev="6.02"><span class="bigfont1" aria-label="ionization energy 6 . 0 2">6.02</span></li> 
+          </ul>
+      </td>
+      <td id="dubnium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="105"><span class="bigfont1" aria-label="atomic number 105">105</span></li>
+             <li data-symbol="D b" aria-label="atomic symbol D b" class="bigfont2">D<span class="letter-tight">b</span></li>
+             <li data-element="dubnium"><span class="bigfont1" aria-label="element">Dubnium</span></li>
+             <li data-weight="(268)"><span class="bigfont1" aria-label="standard atomic weight (268)">(268)</span></li>
+             <li data-groundstate="dubnium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 3 7s 2"> [Rn]5f<sup>14</sup>6d<sup>3</sup>7s<sup>2</sup></li>
+             <li data-ev="6.8"><span class="bigfont1" aria-label="ionization energy 6 . 8">6.8</span></li> 
+          </ul>
+      </td>
+      <td id="seaborgium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="106"><span class="bigfont1" aria-label="atomic number 106">106</span></li>
+             <li data-symbol="S g" aria-label="atomic symbol S g" class="bigfont2">S<span class="letter-tight">g</span></li>
+             <li data-element="seaborgium"><span class="bigfont1" aria-label="element">Seaborgium</span></li>
+             <li data-weight="(269)"><span class="bigfont1" aria-label="standard atomic weight (269)">(269)</span></li>
+             <li data-groundstate="seaborgium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 4 7s 2"> [Rn]5f<sup>14</sup>6d<sup>4</sup>7s<sup>2</sup></li>
+             <li data-ev="7.8"><span class="bigfont1" aria-label="ionization energy 7 . 8">7.8</span></li> 
+          </ul>
+      </td>
       <td>Row 7, Cell 7</td>
       <td>Row 7, Cell 8</td>
       <td>Row 7, Cell 9</td>
@@ -877,7 +904,7 @@
       <td>Row 7, Cell 17</td>
       <td>Row 7, Cell 18</td>
     </tr>
-    <tr>
+    <tr style="margin-top:50px;">
       <td class="hidden">Row 8, Cell 1</td>
       <td class="hidden">Row 8, Cell 2</td>
       <td>Row 8, Cell 3</td>
