--- a/index.html
+++ b/index.html
@@ -891,7 +891,16 @@
              <li data-ev="7.8"><span class="bigfont1" aria-label="ionization energy 7 . 8">7.8</span></li> 
           </ul>
       </td>
-      <td>Row 7, Cell 7</td>
+      <td id="bohrium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="107"><span class="bigfont1" aria-label="atomic number 107">107</span></li>
+             <li data-symbol="B h" aria-label="atomic symbol B h" class="bigfont2">B<span class="letter-tight">h</span></li>
+             <li data-element="bohrium"><span class="bigfont1" aria-label="element">Seaborgium</span></li>
+             <li data-weight="(270)"><span class="bigfont1" aria-label="standard atomic weight (270)">(270)</span></li>
+             <li data-groundstate="bohrium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 5 7s 2"> [Rn]5f<sup>14</sup>6d<sup>5</sup>7s<sup>2</sup></li>
+             <li data-ev="7.7"><span class="bigfont1" aria-label="ionization energy 7 . 7">7.7</span></li> 
+          </ul>
+      </td>
       <td>Row 7, Cell 8</td>
       <td>Row 7, Cell 9</td>
       <td>Row 7, Cell 10</td>
