--- a/index.html
+++ b/index.html
@@ -901,14 +901,14 @@
              <li data-ev="7.7"><span class="bigfont1" aria-label="ionization energy 7 . 7">7.7</span></li> 
           </ul>
       </td>
-       <td id="bohrium" class="artificial" tabindex="0">
+       <td id="hassium" class="artificial" tabindex="0">
             <ul>
-             <li data-atomicnumber="107"><span class="bigfont1" aria-label="atomic number 107">107</span></li>
-             <li data-symbol="B h" aria-label="atomic symbol B h" class="bigfont2">B<span class="letter-tight">h</span></li>
-             <li data-element="bohrium"><span class="bigfont1" aria-label="element">Bohrium</span></li>
-             <li data-weight="(270)"><span class="bigfont1" aria-label="standard atomic weight (270)">(270)</span></li>
-             <li data-groundstate="bohrium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 5 7s 2"> [Rn]5f<sup>14</sup>6d<sup>5</sup>7s<sup>2</sup></li>
-             <li data-ev="7.7"><span class="bigfont1" aria-label="ionization energy 7 . 7">7.7</span></li> 
+             <li data-atomicnumber="108"><span class="bigfont1" aria-label="atomic number 108">108</span></li>
+             <li data-symbol="H s" aria-label="atomic symbol H s" class="bigfont2">H<span class="letter-tight">s</span></li>
+             <li data-element="bohrium"><span class="bigfont1" aria-label="element">Hassium</span></li>
+             <li data-weight="(269)"><span class="bigfont1" aria-label="standard atomic weight (269)">(269)</span></li>
+             <li data-groundstate="bohrium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 6 7s 2"> [Rn]5f<sup>14</sup>6d<sup>6</sup>7s<sup>2</sup></li>
+             <li data-ev="7.6"><span class="bigfont1" aria-label="ionization energy 7 . 6">7.6</span></li> 
           </ul>
       </td>
       <td>Row 7, Cell 9</td>
