--- a/index_backup2.html
+++ b/index_backup2.html
@@ -871,10 +871,46 @@
              <li data-ev="6.02"><span class="bigfont1" aria-label="ionization energy 6 . 0 2">6.02</span></li> 
           </ul>
       </td>
-      <td>Row 7, Cell 5</td>
-      <td>Row 7, Cell 6</td>
-      <td>Row 7, Cell 7</td>
-      <td>Row 7, Cell 8</td>
+      <td id="dubnium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="105"><span class="bigfont1" aria-label="atomic number 105">105</span></li>
+             <li data-symbol="D b" aria-label="atomic symbol D b" class="bigfont2">D<span class="letter-tight">b</span></li>
+             <li data-element="dubnium"><span class="bigfont1" aria-label="element">Dubnium</span></li>
+             <li data-weight="(268)"><span class="bigfont1" aria-label="standard atomic weight (268)">(268)</span></li>
+             <li data-groundstate="dubnium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 3 7s 2"> [Rn]5f<sup>14</sup>6d<sup>3</sup>7s<sup>2</sup></li>
+             <li data-ev="6.8"><span class="bigfont1" aria-label="ionization energy 6 . 8">6.8</span></li> 
+          </ul>
+      </td>
+      <td id="seaborgium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="106"><span class="bigfont1" aria-label="atomic number 106">106</span></li>
+             <li data-symbol="S g" aria-label="atomic symbol S g" class="bigfont2">S<span class="letter-tight">g</span></li>
+             <li data-element="seaborgium"><span class="bigfont1" aria-label="element">Seaborgium</span></li>
+             <li data-weight="(269)"><span class="bigfont1" aria-label="standard atomic weight (269)">(269)</span></li>
+             <li data-groundstate="seaborgium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 4 7s 2"> [Rn]5f<sup>14</sup>6d<sup>4</sup>7s<sup>2</sup></li>
+             <li data-ev="7.8"><span class="bigfont1" aria-label="ionization energy 7 . 8">7.8</span></li> 
+          </ul>
+      </td>
+      <td id="bohrium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="107"><span class="bigfont1" aria-label="atomic number 107">107</span></li>
+             <li data-symbol="B h" aria-label="atomic symbol B h" class="bigfont2">B<span class="letter-tight">h</span></li>
+             <li data-element="bohrium"><span class="bigfont1" aria-label="element">Bohrium</span></li>
+             <li data-weight="(270)"><span class="bigfont1" aria-label="standard atomic weight (270)">(270)</span></li>
+             <li data-groundstate="bohrium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 5 7s 2"> [Rn]5f<sup>14</sup>6d<sup>5</sup>7s<sup>2</sup></li>
+             <li data-ev="7.7"><span class="bigfont1" aria-label="ionization energy 7 . 7">7.7</span></li> 
+          </ul>
+      </td>
+       <td id="hassium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="108"><span class="bigfont1" aria-label="atomic number 108">108</span></li>
+             <li data-symbol="H s" aria-label="atomic symbol H s" class="bigfont2">H<span class="letter-tight">s</span></li>
+             <li data-element="bohrium"><span class="bigfont1" aria-label="element">Hassium</span></li>
+             <li data-weight="(269)"><span class="bigfont1" aria-label="standard atomic weight (269)">(269)</span></li>
+             <li data-groundstate="bohrium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 6 7s 2"> [Rn]5f<sup>14</sup>6d<sup>6</sup>7s<sup>2</sup></li>
+             <li data-ev="7.6"><span class="bigfont1" aria-label="ionization energy 7 . 6">7.6</span></li> 
+          </ul>
+      </td>
       <td>Row 7, Cell 9</td>
       <td>Row 7, Cell 10</td>
       <td>Row 7, Cell 11</td>
@@ -886,7 +922,7 @@
       <td>Row 7, Cell 17</td>
       <td>Row 7, Cell 18</td>
     </tr>
-    <tr>
+    <tr style="margin-top:50px;">
       <td class="hidden">Row 8, Cell 1</td>
       <td class="hidden">Row 8, Cell 2</td>
       <td>Row 8, Cell 3</td>
@@ -934,7 +970,7 @@
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 4 December 2019<br />
+        Content: 6 December 2019<br />
         WebAim: 2 December 2019 0<br />
         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
