--- a/index.html
+++ b/index.html
@@ -911,8 +911,26 @@
              <li data-ev="7.6"><span class="bigfont1" aria-label="ionization energy 7 . 6">7.6</span></li> 
           </ul>
       </td>
-      <td>Row 7, Cell 9</td>
-      <td>Row 7, Cell 10</td>
+      <td id="meitnerium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="109"><span class="bigfont1" aria-label="atomic number 109">109</span></li>
+             <li data-symbol="M t" aria-label="atomic symbol M t" class="bigfont2">M<span class="letter-tight">t</span></li>
+             <li data-element="meitnerium"><span class="bigfont1" aria-label="element">Meitnerium</span></li>
+             <li data-weight="(278)"><span class="bigfont1" aria-label="standard atomic weight (278)">(278)</span></li>
+             <li data-groundstate="meitnerium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+        <td id="darmstadtium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="110"><span class="bigfont1" aria-label="atomic number 110">110</span></li>
+             <li data-symbol="D s" aria-label="atomic symbol D s" class="bigfont2">D<span class="letter-tight">s</span></li>
+             <li data-element="darmstadtium"><span class="bigfont1" aria-label="element">Darmstadtium</span></li>
+             <li data-weight="(281)"><span class="bigfont1" aria-label="standard atomic weight (281)">(281)</span></li>
+             <li data-groundstate="darmstadtium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>>
       <td>Row 7, Cell 11</td>
       <td>Row 7, Cell 12</td>
       <td>Row 7, Cell 13</td>
