--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
-        <td id="darmstadtium" class="artificial" tabindex="0">
+      <td id="darmstadtium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="110"><span class="bigfont1" aria-label="atomic number 110">110</span></li>
              <li data-symbol="D s" aria-label="atomic symbol D s" class="bigfont2">D<span class="letter-tight">s</span></li>
@@ -930,9 +930,27 @@
              <li data-groundstate="darmstadtium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
-      </td>>
-      <td>Row 7, Cell 11</td>
-      <td>Row 7, Cell 12</td>
+      </td>
+      <td id="roentgenium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="111"><span class="bigfont1" aria-label="atomic number 111">111</span></li>
+             <li data-symbol="R g" aria-label="atomic symbol R g" class="bigfont2">R<span class="letter-tight">g</span></li>
+             <li data-element="roentgenium"><span class="bigfont1" aria-label="element">Roentgenium</span></li>
+             <li data-weight="(282)"><span class="bigfont1" aria-label="standard atomic weight (282)">(282)</span></li>
+             <li data-groundstate="roentgenium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+      <td id="copernicium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="112"><span class="bigfont1" aria-label="atomic number 112">112</span></li>
+             <li data-symbol="C n" aria-label="atomic symbol C n" class="bigfont2">C<span class="letter-tight">n</span></li>
+             <li data-element="copernicium"><span class="bigfont1" aria-label="element">Copernicium</span></li>
+             <li data-weight="(285)"><span class="bigfont1" aria-label="standard atomic weight (285)">(285)</span></li>
+             <li data-groundstate="copernicium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
       <td>Row 7, Cell 13</td>
       <td>Row 7, Cell 14</td>
       <td>Row 7, Cell 15</td>
