--- a/index.html
+++ b/index.html
@@ -951,9 +951,36 @@
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
-      <td>Row 7, Cell 13</td>
-      <td>Row 7, Cell 14</td>
-      <td>Row 7, Cell 15</td>
+      <td id="nihonium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="113"><span class="bigfont1" aria-label="atomic number 113">113</span></li>
+             <li data-symbol="N h" aria-label="atomic symbol N h" class="bigfont2">N<span class="letter-tight">h</span></li>
+             <li data-element="nihonium"><span class="bigfont1" aria-label="element">Nihonium</span></li>
+             <li data-weight="(286)"><span class="bigfont1" aria-label="standard atomic weight (286)">(286)</span></li>
+             <li data-groundstate="nihonium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+      <td id="flerovium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="114"><span class="bigfont1" aria-label="atomic number 114">114</span></li>
+             <li data-symbol="F l" aria-label="atomic symbol F l" class="bigfont2">F<span class="letter-tight">l</span></li>
+             <li data-element="flerovium"><span class="bigfont1" aria-label="element">Flerovium</span></li>
+             <li data-weight="(286)"><span class="bigfont1" aria-label="standard atomic weight (286)">(286)</span></li>
+             <li data-groundstate="flerovium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+      <td id=" moscovium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="113"><span class="bigfont1" aria-label="atomic number 113">113</span></li>
+             <li data-symbol="M c" aria-label="atomic symbol M c" class="bigfont2">M<span class="letter-tight">c</span></li>
+             <li data-element=" moscovium"><span class="bigfont1" aria-label="element"> Moscovium</span></li>
+             <li data-weight="(289)"><span class="bigfont1" aria-label="standard atomic weight (289)">(289)</span></li>
+             <li data-groundstate="moscovium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
       <td>Row 7, Cell 16</td>
       <td>Row 7, Cell 17</td>
       <td>Row 7, Cell 18</td>
