--- a/index.html
+++ b/index.html
@@ -971,9 +971,9 @@
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
-      <td id=" moscovium" class="artificial" tabindex="0">
+      <td id="moscovium" class="artificial" tabindex="0">
             <ul>
-             <li data-atomicnumber="113"><span class="bigfont1" aria-label="atomic number 113">113</span></li>
+             <li data-atomicnumber="115"><span class="bigfont1" aria-label="atomic number 115">115</span></li>
              <li data-symbol="M c" aria-label="atomic symbol M c" class="bigfont2">M<span class="letter-tight">c</span></li>
              <li data-element=" moscovium"><span class="bigfont1" aria-label="element"> Moscovium</span></li>
              <li data-weight="(289)"><span class="bigfont1" aria-label="standard atomic weight (289)">(289)</span></li>
@@ -981,9 +981,36 @@
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
-      <td>Row 7, Cell 16</td>
-      <td>Row 7, Cell 17</td>
-      <td>Row 7, Cell 18</td>
+      <td id="livermorium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="116"><span class="bigfont1" aria-label="atomic number 116">116</span></li>
+             <li data-symbol="L v" aria-label="atomic symbol L v" class="bigfont2">L<span class="letter-tight">v</span></li>
+             <li data-element="livermorium"><span class="bigfont1" aria-label="element">Livermorium</span></li>
+             <li data-weight="(293)"><span class="bigfont1" aria-label="standard atomic weight (293)">(293)</span></li>
+             <li data-groundstate="livermorium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+       <td id="tennessine" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="117"><span class="bigfont1" aria-label="atomic number 117">117</span></li>
+             <li data-symbol="T s" aria-label="atomic symbol T s" class="bigfont2">T<span class="letter-tight">s</span></li>
+             <li data-element="tennessine"><span class="bigfont1" aria-label="element">Tennessine</span></li>
+             <li data-weight="(294)"><span class="bigfont1" aria-label="standard atomic weight (294)">(294)</span></li>
+             <li data-groundstate="tennessine"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+       <td id="oganesson" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="118"><span class="bigfont1" aria-label="atomic number 118">118</span></li>
+             <li data-symbol="O g" aria-label="atomic symbol O g" class="bigfont2">O<span class="letter-tight">g</span></li>
+             <li data-element="oganesson"><span class="bigfont1" aria-label="element">Oganesson</span></li>
+             <li data-weight="(294)"><span class="bigfont1" aria-label="standard atomic weight (294)">(294)</span></li>
+             <li data-groundstate="oganesson"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr style="margin-top:50px;">
       <td class="hidden">Row 8, Cell 1</td>
