--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,16 @@
              <li data-ev="5.5769"><span class="bigfont1" aria-label="ionization energy 5 . 5 7 6 9">5.5769</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 4</td>
+      <td id="cerium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="58"><span class="bigfont1" aria-label="atomic number 58">58</span></li>
+             <li data-symbol="C e" aria-label="atomic symbol C e" class="bigfont2">C<span class="letter-tight">e</span></li>
+             <li data-element="cerium"><span class="bigfont1" aria-label="element">Cerium</span></li>
+             <li data-weight="140.12"><span class="bigfont1" aria-label="standard atomic weight  140 . 1 2">140.12</span></li>
+             <li data-groundstate="cerium"><span class="bigfont1" aria-label="ground [Xe]4f 5d 6s 2">[Xe]4f5d6s<sup>2</sup><span></li>
+             <li data-ev="5.5386"><span class="bigfont1" aria-label="ionization energy 5 . 5 3 8 6">5.5386</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 5</td>
       <td>Row 8, Cell 6</td>
       <td>Row 8, Cell 7</td>
