--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,16 @@
              <li data-ev="5.5386"><span class="bigfont1" aria-label="ionization energy 5 . 5 3 8 6">5.5386</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 5</td>
+      <td id="praseodymium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="59"><span class="bigfont1" aria-label="atomic number 59">59</span></li>
+             <li data-symbol="P r" aria-label="atomic symbol P r" class="bigfont2">P<span class="letter-tight">r</span></li>
+             <li data-element="praseodymium"><span class="bigfont1" aria-label="element">Praseodymium</span></li>
+             <li data-weight="140.91"><span class="bigfont1" aria-label="standard atomic weight  140 . 9 1">140.91</span></li>
+             <li data-groundstate="praseodymium"><span class="bigfont1" aria-label="ground[Xe]4f 3 6s 2">[Xe]4f<sup>3</sup>6s<sup>2</sup><span></li>
+             <li data-ev="5.4702"><span class="bigfont1" aria-label="ionization energy 5 . 4 7 0 2">5.4702</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 6</td>
       <td>Row 8, Cell 7</td>
       <td>Row 8, Cell 8</td>
