--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1025,8 +1025,26 @@
              <li data-ev="5.5769"><span class="bigfont1" aria-label="ionization energy 5 . 5 7 6 9">5.5769</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 4</td>
-      <td>Row 8, Cell 5</td>
+      <td id="cerium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="58"><span class="bigfont1" aria-label="atomic number 58">58</span></li>
+             <li data-symbol="C e" aria-label="atomic symbol C e" class="bigfont2">C<span class="letter-tight">e</span></li>
+             <li data-element="cerium"><span class="bigfont1" aria-label="element">Cerium</span></li>
+             <li data-weight="140.12"><span class="bigfont1" aria-label="standard atomic weight  140 . 1 2">140.12</span></li>
+             <li data-groundstate="cerium"><span class="bigfont1" aria-label="ground [Xe]4f 5d 6s 2">[Xe]4f5d6s<sup>2</sup><span></li>
+             <li data-ev="5.5386"><span class="bigfont1" aria-label="ionization energy 5 . 5 3 8 6">5.5386</span></li> 
+          </ul>
+      </td>
+      <td id="praseodymium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="59"><span class="bigfont1" aria-label="atomic number 59">59</span></li>
+             <li data-symbol="P r" aria-label="atomic symbol P r" class="bigfont2">P<span class="letter-tight">r</span></li>
+             <li data-element="praseodymium"><span class="bigfont1" aria-label="element">Praseodymium</span></li>
+             <li data-weight="140.91"><span class="bigfont1" aria-label="standard atomic weight  140 . 9 1">140.91</span></li>
+             <li data-groundstate="praseodymium"><span class="bigfont1" aria-label="ground[Xe]4f 3 6s 2">[Xe]4f<sup>3</sup>6s<sup>2</sup><span></li>
+             <li data-ev="5.4702"><span class="bigfont1" aria-label="ionization energy 5 . 4 7 0 2">5.4702</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 6</td>
       <td>Row 8, Cell 7</td>
       <td>Row 8, Cell 8</td>
