--- a/index.html
+++ b/index.html
@@ -1041,11 +1041,20 @@
              <li data-symbol="P r" aria-label="atomic symbol P r" class="bigfont2">P<span class="letter-tight">r</span></li>
              <li data-element="praseodymium"><span class="bigfont1" aria-label="element">Praseodymium</span></li>
              <li data-weight="140.91"><span class="bigfont1" aria-label="standard atomic weight  140 . 9 1">140.91</span></li>
-             <li data-groundstate="praseodymium"><span class="bigfont1" aria-label="ground[Xe]4f 3 6s 2">[Xe]4f<sup>3</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="praseodymium"><span class="bigfont1" aria-label="ground [Xe]4f 3 6s 2">[Xe]4f<sup>3</sup>6s<sup>2</sup><span></li>
              <li data-ev="5.4702"><span class="bigfont1" aria-label="ionization energy 5 . 4 7 0 2">5.4702</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 6</td>
+       <td id="neodymium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="60"><span class="bigfont1" aria-label="atomic number 60">60</span></li>
+             <li data-symbol="N d" aria-label="atomic symbol N d" class="bigfont2">N<span class="letter-tight">d</span></li>
+             <li data-element="neodymium"><span class="bigfont1" aria-label="element">Neodymium</span></li>
+             <li data-weight="144.24"><span class="bigfont1" aria-label="standard atomic weight  144 . 2 4">144.24</span></li>
+             <li data-groundstate="neodymium"><span class="bigfont1" aria-label="ground [Xe]4f 4 6s 2">[Xe]4f <sup>4</sup> 6s <sup>2</sup> <span></li>
+             <li data-ev="5.5250"><span class="bigfont1" aria-label="ionization energy 5 . 5 2 5 0">5.5250</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 7</td>
       <td>Row 8, Cell 8</td>
       <td>Row 8, Cell 9</td>
