--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,16 @@
              <li data-ev="5.6437"><span class="bigfont1" aria-label="ionization energy 5 . 6 4 3 7">5.6437</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 9</td>
+       <td id="europium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="63"><span class="bigfont1" aria-label="atomic number 63">63</span></li>
+             <li data-symbol="E u" aria-label="atomic symbol E u" class="bigfont2">E<span class="letter-tight">u</span></li>
+             <li data-element="europium"><span class="bigfont1" aria-label="element">Europium</span></li>
+             <li data-weight="151.96"><span class="bigfont1" aria-label="standard atomic weight 151 . 9 6">151.96</span></li>
+             <li data-groundstate="europium"><span class="bigfont1" aria-label="ground [Xe]4f 7 6s 2">[Xe]4f <sup>7</sup> 6s<sup>2</sup> <span></li>
+             <li data-ev="5.6704"><span class="bigfont1" aria-label="ionization energy 5 . 6 7 0 4">5.6704</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 10</td>
       <td>Row 8, Cell 11</td>
       <td>Row 8, Cell 12</td>
