--- a/index.html
+++ b/index.html
@@ -1143,15 +1143,15 @@
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
 <script>
 function search_periodic(){
-var letter = document.getElementById("search_field_input").value;
+var letters = document.getElementById("search_field_input").value;
 var text;
 
    // If the letter is "c"
-   if (letter === "c") {
-     text = "Spot on! Good job!";
+   if (letters === "Hydrogen") {
+     text = "Hydrogen";
 
    // If the letter is "b" or "d"
-   } else if (letter === "b" || letter === "d") {
+   } else if (letters === "b" || letters === "d") {
      text = "Close, but not close enough.";
 
    // If the letter is anything else
