--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@ var text;
 
    // If the letter is "c"
    if (letters === "Hydrogen") {
-     text = "Hydrogen";
+     text = "Hydrogen" + "<br/>" + "Atomic Number 1";
 
    // If the letter is "b" or "d"
    } else if (letters === "b" || letters === "d") {
