--- a/index.html
+++ b/index.html
@@ -1150,9 +1150,9 @@ var text;
    if (letters === "Hydrogen") {
      text = "Hydrogen" 
         + "<br/>" 
-        + "Atomic Number: 1"  + "<br />
-        + "Standard Atomic Weight: 1.008"  + "<br />
-        + "<br />;
+        + "Atomic Number: 1"  + "<br/>"
+        + "Standard Atomic Weight: 1.008"  + "<br/>"
+        + "<br/>";
 
    // If the letter is "b" or "d"
    } else if (letters === "b" || letters === "d") {
