--- a/index.html
+++ b/index.html
@@ -1159,10 +1159,11 @@ var text;
 
    // If the letter is "c"
    if (letter === "HYDROGEN") {
-     text = "<br/>" 
+     text = "<br/>"
+        + "<br/>"
         + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
-        + "Ground State" + "2 S 1/2" + "<br/>"
+        + "Ground State: 2 S 1/2" + "<br/>"
         + "Atomic Number: 1"  + "<br/>"
         + "Standard Atomic Weight: 1.008"  + "<br/>"
         + "Ground State Configuration: 1s"  + "<br/>"
